fix: login layout issues (#247)
* show client validation error on password field
* show messages inside frame for ie11
* clear error messages before handling success response
* update forgot password screen according to the design

--- a/src/app/components/login/forgot-password-form/forgot-password-form.component.scss
+++ b/src/app/components/login/forgot-password-form/forgot-password-form.component.scss
@@ -3,7 +3,7 @@
 .kLoginForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   line-height: 19px;
 
@@ -65,6 +65,21 @@
       &.has-success:focus {
         border: 2px solid $kPrimary;
       }
+    }
+  }
+
+  .kLoginFormEmailSentTitle {
+    margin-top: 34px;
+    font-weight: bold;
+    color: $kGrayscale1;
+
+    .kLoginFormEmailSentIcon {
+      border: 2px solid;
+      border-radius: 50%;
+      padding: 6px;
+      font-size: 17px;
+      color: $kSuccess;
+      margin-right: 20px;
     }
   }
 
